--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.15.8",
+    "@nuxt/typescript-build": "^2.1.0",
     "nuxt": "^3.0.0"
   },
   "dependencies": {
