--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
-    "nuxt": "^3.0.0"
+    "nuxt": "^3.0.0",
+    "nuxt-icon": "^0.2.11"
   },
   "dependencies": {
     "sass": "^1.57.1"
